--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
               <button class="burger closed">burger</button>
               <ul>
                 <li><a href="#" class="burger-main-page-link">Main page</a></li>
-                <li><a href="#section1" class="burger-link" data-section="section1"></a>Section 1</li>
-                <li><a href="#section2" class="burger-link" data-section="section2"></a>Section 2</li>
-                <li><a href="#section3" class="burger-link" data-section="section3"></a>Section 3</li>
-                <li><a href="#section4" class="burger-link" data-section="section4"></a>Section 4</li>
-                <li><a href="#section5" class="burger-link" data-section="section5"></a>Section 5</li>
-                <li><a href="#section6" class="burger-link" data-section="section6"></a>Section 6</li>
+                <li><a href="#section1" class="burger-link" data-section="section1">Section 1</a></li>
+                <li><a href="#section2" class="burger-link" data-section="section2">Section 2</a></li>
+                <li><a href="#section3" class="burger-link" data-section="section3">Section 3</a></li>
+                <li><a href="#section4" class="burger-link" data-section="section4">Section 4</a></li>
+                <li><a href="#section5" class="burger-link" data-section="section5">Section 5</a></li>
+                <li><a href="#section6" class="burger-link" data-section="section6">Section 6</a></li>
               </ul>
             </section>
             <section class="main-page open">
