--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
                 <div class="marker"></div>
                 <h2 class="visually-hidden">Section 1</h2>
               </section>
-              <section class="section" id="section2" data-section-name="Section 2" draggable="false">
+              <section class="section" id="section2" data-section-name="Section 2" draggable="false" style="position: relative;">
                 <h2 class="visually-hidden">Section 2</h2>
                 <div class="marker"></div>
                 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi0.wp.com%2Freptileapartment.com%2Fwp-content%2Fuploads%2F10677215_10205367365727702_561140685_o.jpg&f=1&nofb=1&ipt=27f7112f6c0844d9e7b3eda58e0edaf55d47d5745b3ff059494c6e6748fe85d2&ipo=images" alt="">
                 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fseancrane.com%2Fblog%2Fwp-content%2Fuploads%2F2017%2F03%2Fred_footed_tortoise_7.jpg&f=1&nofb=1&ipt=d9de80ae342b401eadf16254b0a8b1801a5380460e651407a600d9af521cbbfc&ipo=images" alt="">
                 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi0.wp.com%2Freptileapartment.com%2Fwp-content%2Fuploads%2F10677215_10205367365727702_561140685_o.jpg&f=1&nofb=1&ipt=27f7112f6c0844d9e7b3eda58e0edaf55d47d5745b3ff059494c6e6748fe85d2&ipo=images" alt="">
+                <div class="some-fixed-element" style="position: sticky; bottom: 0; width: 100%; height: 60px; background-color: aqua;"></div>
               </section>
               <section class="section" id="section3" data-section-name="Section 3" draggable="false">
                 <div class="marker"></div>
