feat starting changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="page-container">
         <header class="header">
           <div class="buttons-wrapper">      
             <button class="container-controls" id="left">left</button>
@@ -17,7 +17,7 @@
           <button class="burger closed">burger</button>
         </header>
         <main>
-            <section class="burger-menu">
+            <section class="burger-menu" style="background-color: green;">
               <button class="burger closed">burger</button>
               <ul>
                 <li><a href="#" class="burger-main-page-link">Main page</a></li>
@@ -29,8 +29,8 @@
                 <li><a href="#section6" class="burger-link" data-section="section6">Section 6</a></li>
               </ul>
             </section>
-            <section class="main-page open">
-              <button class="burger closed">burger</button>
+            <section class="main-page open" style="background-color: aliceblue;">
+              <button class="burger closed js-main-burger">burger</button>
               <a href="#section2" data-section="section2" class="button main-page-link">Перейти к черепашкам</a> 
               <a href="#" class="rules" target="_blank">Посмотреть правила</a>       
             </section>
